Change api structure (now method POST create 1+ rows)
