# internal/subscriptions/dto.go
@@ -6,15 +6,13 @@ type SubscriptionCreateDTO struct {
 	Name    string    `json:"name"`
 	Price   int       `json:"price"`
 	UserID  string    `json:"user_id"`
-	StartAt time.Time `json:"start_at"`
-	EndAt   time.Time `json:"end_at"`
+	StartAt time.Time `json:"start_date"`
+	EndAt   time.Time `json:"end_date"`
 }
 
 type SubscriptionUpdateDTO struct {
-	ID      int       `json:"id"`
-	Name    string    `json:"name"`
-	Price   int       `json:"price"`
-	UserID  string    `json:"user_id"`
-	StartAt time.Time `json:"start_at"`
-	EndAt   time.Time `json:"end_at"`
+	ID     int    `json:"id"`
+	Name   string `json:"name"`
+	Price  int    `json:"price"`
+	UserID string `json:"user_id"`
 }
